Fix notebook and app

--- a/notebooks/data_lineage_exploration.ipynb
+++ b/notebooks/data_lineage_exploration.ipynb
@@ -78,8 +78,17 @@
     "\n",
     "# PySpark libraries\n",
     "from pyspark.sql import SparkSession, DataFrame\n",
-    "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import *\n",
+    "from pyspark.sql.functions import (\n",
+    "    col, when, isnan, isnull, \n",
+    "    sum as spark_sum, avg as spark_avg, \n",
+    "    count as spark_count, max as spark_max, \n",
+    "    min as spark_min, desc, asc\n",
+    ")\n",
+    "from pyspark.sql.types import (\n",
+    "    StructType, StructField, StringType, \n",
+    "    IntegerType, DoubleType, BooleanType, \n",
+    "    DateType, TimestampType\n",
+    ")\n",
     "from pyspark.sql.window import Window\n",
     "\n",
     "# Visualization libraries\n",
@@ -166,7 +175,10 @@
     "# Global variables for tracking\n",
     "transformation_history = []\n",
     "loaded_datasets = {}\n",
-    "current_lineage = None"
+    "current_lineage = None\n",
+    "\n",
+    "print(\"\\n🎯 Environment Setup Complete!\")\n",
+    "print(\"📋 Ready to load data and start transformations!\")"
    ]
   },
   {
